Fixed photo stretching on visiting page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -354,14 +354,6 @@
      background-color: #fafafa;
  }
 
- #place-image {
-     height: 134px;
-     overflow: hidden;
-     display: flex;
-     align-items: center;
-     justify-content: center;
- }
-
  #place img {
      width: 100%;
      height: 100%;
@@ -414,14 +406,7 @@
 
  }
 
- /* 1170×2532 pixels at 460ppi */
- @media only screen and (width: 390px) and (height: 844px) and (-webkit-device-pixel-ratio: 3) {
-     #place-image {
-         height: 202px;
-     }
- }
-
- /* Media query: tablets and larger (768px and up) */
+  /* Media query: tablets and larger (768px and up) */
  @media screen and (min-width: 768px) {
      header img {
          max-height: 100%;
@@ -583,6 +568,10 @@
 
      #place-image {
          height: 202px;
+         overflow: hidden;
+         display: flex;
+         align-items: center;
+         justify-content: center;
      }
 
  }
